--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <!-- CUSTOM CSS -->
   <link rel="stylesheet" href="stylees.css">
+  <link rel="icon" href="./img/pequeña.ico"
+
 </head>
 
 <body>
